SERVER-50458 Re-enable retryability of commitChunkMigration on the config server